# SwiftBolt_ML

./: .env.canary  .env.example  .gitignore  .sim.env  AAPL_walk_forward_20260202_073002_predictions.csv  AAPL_walk_forward_fixed_20260202_084431_predictions.csv  ADAPTIVE_SUPERTREND_BUILD_SUMMARY.md  ADD_FILES_TO_XCODE.md  AGENTS.md  ALPACA_FIX_SUMMARY.md  ALPACA_INTEGRATION_COMPLETE.md  ALPACA_PROVIDER_STRATEGY.md  APPLY_CRITICAL_FIXES.sql  ARCHITECTURE_OVERVIEW.md  AUDIT_DELIVERY_SUMMARY.txt  AUDIT_QUICK_REFERENCE.md  AUDIT_VERIFICATION_FRAMEWORK.md  AUTOMATED_BACKFILL_SUCCESS.md  BACKFILL_SETUP_COMPLETE.md  BACKFILL_SUCCESS.sql  BATCH_REPAIR_GUIDE.md  BATS_AAPL, 60_7a5cf.csv  BATS_NVDA, 1D_67f84 1.36.16 PM.csv  BUILD_ERRORS_FIX.md  BUILD_STATUS.md  BUILD_SUCCESS_SUMMARY.md  CANARY_7DAY_CHECKLIST.md  CHANGELOG.md  CHART_ACCURACY_CHECKLIST.md  CHART_DATA_FIX_SUMMARY.md  CHART_DATA_TROUBLESHOOTING.md  CHART_FIXES_SUMMARY.md  CHART_RENDERING_FIX_2026-01-04.md  CLEANUP_DUPLICATES.sql  CLIENT_UI_INTEGRATION_COMPLETE.md  COMMIT_MESSAGE.md  COMPLETE_MIGRATION_AND_TESTING_GUIDE.md  CONSOLIDATION_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  COST_COMPARISON_AND_RECOMMENDATION.md  (+150 more)
ml/: .dockerignore  .env.example  BALANCED_FIX_APPLIED.md  DOCKER_SETUP.md  Dockerfile  FINAL_FIX_EXPLANATION.md  Makefile  POLYNOMIAL_REGRESSION_FIXES_WIRING.md  QUICK_CHANGES.md  QUICK_CHANGES_BALANCED.md  README.md  RUN_THIS_FINAL_VERSION.md  SCHEDULED_JOBS.md  TEST_SCRIPTS_README.md  WEB_CHART_INTEGRATION.md  analyze_feature_importance.py  analyze_feature_importance_simple.py  analyze_walk_forward.py  apply_tabpfn_migration.py  backfill_all_regimes.sh  backfill_sentiment.py  benchmark_hourly_tabpfn.py  benchmark_simplified_features.py  binary_benchmark.py  check_tabpfn.py  compare_features.py  compare_models.py  compare_nvda_data_sources.py  compare_rl_agent.py  compare_timesfm.py  debug_backtest.py  debug_sentiment_tsla.py  debug_walk_forward.py  debug_walk_forward_full.py  display_tabpfn_results.py  docker-compose.yml  feature_importance.csv  hybrid_tabpfn_xgb_aapl.py  improved_output.txt  original_output.txt  (+35 more)
ml/api/: README.md  binary_forecast_service.py  main.py
ml/canary_monitoring_reports/: 20260128_canary_report.md
ml/config/: model_config.yaml  ptq_policy.json  settings.py
ml/docker/: Dockerfile.tabpfn  docker-compose.tabpfn.yml  requirements.tabpfn.txt
ml/docs/: BACKFILL_IMPLEMENTATION_COMPLETE.md  BACKFILL_OPERATIONS.md  BACKFILL_VALIDATION.md  CANARY_BLOCKERS_AND_FIXES.md  COMPARISON_MODELS.md  DATABASE_CONNECTION.md  ML_HOUSE_RULES.md  POLYNOMIAL_SR_QUICKSTART.md  POLYNOMIAL_SR_VISUALIZATION.md  POSTGRES_BEST_PRACTICES_IMPLEMENTATION_PLAN.md  auth_bypass_solution.md
ml/examples/: polynomial_sr_example.py  realtime_pivot_dashboard.py
ml/forecasting_lab/: README.md  __init__.py  requirements_lab.txt
ml/results/: AAPL_walk_forward_20260202_073002_window_stats.csv  MRK_walk_forward_predictions_d1.csv  PG_walk_forward_predictions_d1.csv  TSLA_walk_forward_predictions.csv  TSLA_walk_forward_predictions_d1.csv
ml/scripts/: BLIND_VALIDATION_README.md  DIVERSIFIED_VALIDATION_GUIDE.md  VALIDATION_FIX_SUMMARY.md  analyze_validation_diversity.py  backfill_ohlc_d1_alpaca.py  backfill_ohlc_h4_alpaca.py  backfill_regime_ohlc.sh  blind_intraday_replay_validation.py  blind_walk_forward_validation.py  check_lookahead_bias.py  compare_validation_by_symbol_horizon.py  debug_model_33_percent.py  diagnose_model_failure.py  generate_binary_forecasts.py  generate_canary_metrics.py  generate_daily_binary_forecasts.py  generate_real_data_validation.py  get_technical_indicators.py  hourly_canary_summary.py  kalman_health_aggregator.py  l1_gate_validation.py  optimize_portfolio.py  quick_validation_check.py  rank_all_watchlist_symbols.sh  rank_priority_symbols.sh  run_backtest.py  run_diversified_validation.sh  run_forecast_ops_check.py  run_forecast_quality.py  run_model_training.py  run_regime_testing.py  run_stress_test.py  run_tabpfn_docker.sh  run_verification_gate_known_row.py  run_walk_forward.py  tabpfn_batch_job.py  tabpfn_job.py  test_fixed_thresholds.py  test_walk_forward_cv_logs.py  validate_binary_model.py  (+2 more)
ml/src/: job_worker.py  (+28 more)
(+2082 files in other folders)
