[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swiftbolt-ml"
version = "0.1.0"
description = "ML pipeline for SwiftBolt stock analysis"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",  # Gradient boosting for ensemble forecaster
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",  # Supabase client
    "scipy>=1.11.0",  # Scientific computing
    "pyyaml>=6.0.0",  # YAML configuration
    "hmmlearn>=0.3.0",  # HMM for market regime detection
    "imbalanced-learn>=0.11.0",  # SMOTE for class imbalance
    "arch>=6.0.0",  # GARCH volatility modeling
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pandas-stubs>=2.0.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["swiftbolt_ml"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=swiftbolt_ml --cov-report=term-missing"
